DE421 - IOS layout issue on the helpline number - fixed.

--- a/c3/app/assets/carers-allowance.scss
+++ b/c3/app/assets/carers-allowance.scss
@@ -93,7 +93,7 @@ main {
 			   border: 0;
 			   margin: 0;
 			   padding: 0;
-			   a {
+			   a.info {
 				   display: inline-block;
 				   position: relative;
 				   height: 18px;
